[package]
name = "custom_price_feed"
version = "0.1.0"
description = "Test / dev custom price feeds for GRAI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_price_feed"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
anchor-lang = { version = "0.31.1" }
