[package]
name = "grinders"
version = "0.1.0"
description = "Grinders: custodian NFT registry for GRAI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grinders"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
grai = { path = "../grai", features = ["cpi", "no-entrypoint"] }
